fix jumpy layout

--- a/src/app/design-system/reset.scss
+++ b/src/app/design-system/reset.scss
@@ -87,6 +87,7 @@ video {
   font: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 /* HTML5 display-role reset for older browsers */
 article,
