--- a/src/modules/layout/header/header.module.scss
+++ b/src/modules/layout/header/header.module.scss
@@ -4,6 +4,13 @@
 @use "src/app/design-system/media" as media;
 @use "src/app/design-system/layout-variables" as layoutVariables;
 
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -62,17 +69,11 @@
   }
 }
 
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
 .header__li {
+  transition: transform 0.2s ease;
+
   &:hover {
     transform: scale(1.1);
-    transition: transform 0.2s;
   }
 
   &:active {
